force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__LastEscrowProcessedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastEscrowProcessedDateTime__c</fullName>
    <label>Last Escrow Processed Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastEscrowProcessedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>