force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__LastPointsAggregationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastPointsAggregationDateTime__c</fullName>
    <label>Last Points Aggregation Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastPointsAggregationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>