force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__PointsBalBeforeSecondLastReset__c.field-meta.xml
<CustomField>
    <fullName>ssot__PointsBalBeforeSecondLastReset__c</fullName>
    <label>Points Bal Bef Second To Last Reset</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PointsBalBeforeSecondLastReset</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>