force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__RedemStlPendFromDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__RedemStlPendFromDateTime__c</fullName>
    <label>Redemption Stl Pending From Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RedemStlPendFromDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>