force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__TotalEscrowAccruedPointsNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalEscrowAccruedPointsNumber__c</fullName>
    <label>Total Escrow Points Accrued</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalEscrowAccruedPointsNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>