force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__TotalEscrowRolloverPointsNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalEscrowRolloverPointsNumber__c</fullName>
    <label>Total Escrow Rollover Points</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalEscrowRolloverPointsNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>